fixed the alignment

--- a/css/style.css
+++ b/css/style.css
@@ -30,9 +30,6 @@ html {
     box-sizing: border-box;
     font-family: 'Poppins', -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
     
-        box-sizing: border-box;
-    
-    
 }
 
 html {
